standards.

** You can access `mouse-buffer-menu' (C-down-mouse-1) using C-f10.

+++
** New buffer-local `electric-pair-local-mode'.


* Changes in Specialized Modes and Packages in Emacs 25.1

** You can recompute the VC state of a file buffer with `M-x vc-refresh-state'
** Prog mode has some support for multi-mode indentation.
See `prog-indentation-context' and `prog-widen'.

** Prettify Symbols mode supports custom composition predicates.  By
overriding the default `prettify-symbols-compose-predicate', modes can
specify in which contexts a symbol map be composed to some unicode
character.  `prettify-symbols-default-compose-p' is the default which
is suitable for most programming languages such as C or Lisp (but not
(La)TeX).

** New `xterm-screen-extra-capabilities' config.

** The `save-place' variable is replaced by a `save-place-mode'.

** ERC

*** Hide message types by network or channel.  `erc-hide-list' will
hide all messages of the specified type, where `erc-network-hide-list'
and `erc-channel-hide-list' will only hide the specified message types
for the respective specified targets.

** Midnight-mode
*** `midnight-mode' is a proper minor mode.
*** clean-buffer-*-regexps can now specify buffers via predicate functions.

** In xterms, killing text now also sets the CLIPBOARD/PRIMARY selection
in the surrounding GUI (using the OSC-52 escape sequence).  This only works
if your xterm supports it and enables the `allowWindowOps' options (disabled
by default at least in Debian, for security reasons).

Similarly, you can yank the CLIPBOARD/PRIMARY selection (using the OSC-52
escape sequence) if your xterm has the feature enabled but for that you
additionally need to add `getSelection' to `xterm-extra-capabilities'.

** xterm-mouse-mode now supports mouse-tracking (if your xterm supports it).

** package.el

*** New "external" package status.
An external package is any installed package that's not built-in and