@@ -318,12 +318,16 @@ standards.
 ** Prog mode has some support for multi-mode indentation.
 See `prog-indentation-context' and `prog-widen'.
 
-** Prettify Symbols mode supports custom composition predicates.  By
+** Prettify Symbols mode
+*** Prettify Symbols mode supports custom composition predicates.  By
 overriding the default `prettify-symbols-compose-predicate', modes can
 specify in which contexts a symbol map be composed to some unicode
 character.  `prettify-symbols-default-compose-p' is the default which
 is suitable for most programming languages such as C or Lisp (but not
 (La)TeX).
+
+*** Symbols are not prettified while point is inside them.
+New variable `prettify-symbols-unprettify-at-point' configures this.
 
 ** New `xterm-screen-extra-capabilities' config.
 
